--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-japan
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Progate</title>
+    <link rel="stylesheet" href="stylesheet.css">
+  </head>
+  <body>
+    <h1 class="title">Progateへようこそ</h1>
+    <p>Progateはオンラインでプログラミングが学べるサービスです。</p>
+  </body>
+</html>
 
